# 2024.05.01 (Version 1.7)
## Added

* A "Test Connection" button to the connection info dialog.

# 2024.01.11 (Version 1.6, Build 2)
## Fixed

* Issues with SCRAM and PLAIN SASL authentication.

# 2024.01.06 (Version 1.6, Build 1)
## Added

* The Timestamp Lua class.

## Changed

* Improved record read throughput & reduced memory utilization.

## Fixed

* macOS: Jump Popover timestamps' seconds components are truncated.

# 2023.12.03 (Version 1.5, Build 1)
## Added

* Improvements to Lua error reporting.
* Jump to Line in the Scripting Window.
* Support for creating, updating and deleting schemas.

## Fixed

* Double & triple click to select words in the Scripting Window on
  Windows and Linux.
* Partition starvation issue when jumping to old offsets.

# 2023.11.12 (Version 1.4, Build 1)
## Added

* Documentation for many new Lua functions.
* Improved Lua script error reporting output.
* Initial support for rendering data from Lua scripts.

## Fixed

* A crash during update on macOS.
* Changelog dark-mode compatibility on macOS.
* Improved robustness in the face of errors.

# 2023.10.30 (Version 1.3, Build 1)
## Fixed

* SSL Certs can be provided without associated SSL Keys. This makes it
  possible to provide custom CA certs without associated keys.
* Updates are now checked on boot on Linux and Windows when enabled.

# 2023.10.15 (Version 1.2, Build 1)
## Added

* Franz for Windows BETA release.
* Support for looking up broker and topic config docs.
* Support for updating broker and topic configs.

## Fixed

* A memory leak.

# 2023.09.21 (Version 1.1, Build 1)
## Added

* Support for running scripts on already-loaded data from the
  Scripting Window.
* Support for connecting to Kafka via an HTTP proxy.

## Changed

* Franz now requires macOS 13+.
* The Jump Popover defaults to "recent" instead of "latest".

# 2023.08.30 (Version 1.0, Build 8)
## Added

* Support for providing custom SSL keys and certificates.